PosTrack/PNLib-v3.1.33.5652/include/PNLib.h

// Set sensor suit type: Neuron suit or Wireless legacy sensor type
PNLIB_API void PNSetSensorSuitType(SensorSuitTypes modes);
// Set sensor combination mode. PNCheckSensorBindingMode will be called in this function to check the current sensor binding if is compfortable with the refered mode.
PNLIB_API PNBOOL PNSetSensorCombinationMode(int avatarIndex, SensorCombinationModes mode);
// Set or switch run mode between realtime mode and raw file playing mode
// (打开文件前必须显式的指定为播放模式)
PNLIB_API void PNSetRunningMode(RunningMode runMode);
// Get current running mode
PNLIB_API RunningMode PNGetRunningMode();
// 设置脊柱平滑系数, breastbone:胸椎平滑系数(0~1), vertebra:脊椎平滑系数(0~1)
PNLIB_API void PNSetSpineSmoothFactors(int avatarIndex, float breastbone, float vertebra);
    
// 设置接触信息回调函数
PNLIB_API void PNRegisterContactDataCallback(void* customObject, PNEventContactDataCallback handler);
// 设置重心矢量回调函数
PNLIB_API void PNRegisterBodyCenterMassCallback(void* customObject, PNEventBodyCenterMassCallback handle);
// 身体倾斜矢量回调函数
PNLIB_API void PNRegisterBodySwingVectorStringCallback(void* customObject, PNEventBodySwingVectorStringCallback handle);
/**********************************************************
 *                     Avatar management                  *
 **********************************************************/
// Create a avatar in scene
PNLIB_API int PNCreateAvatar();
// Delete a avatar from scene
PNLIB_API int PNRemoveAvatar(int avatarIndex);
// Get total avatars count in current scene
PNLIB_API int PNGetAvatarCount();
// 阻止P发散的阻尼系数
PNLIB_API void PNSetPDamping(int avatarIndex, float pdamping);
// 
PNLIB_API float PNGetPDamping(int avatarIndex);
// 设置地面高度，单位：米
PNLIB_API void PNSetGroundHeight(int avatarIndex, float height);
// 获取地面高度，单位：米
PNLIB_API float PNGetGroundHeight(int avatarIndex);
/**********************************************************
 *                    Smooth settings                     *
 **********************************************************/
// 激活平滑功能
PNLIB_API void PNEnableSmoothFilter(int avatarIndex, PNBOOL enable);
// 检查是否开启smooth功能
PNLIB_API PNBOOL PNIsSmoothFilterEnabled(int avatarIndex);
// 设置平滑系数
PNLIB_API void PNSetSmoothFactor(int avatarIndex, SmoothFactors smoothFactors);
PNLIB_API void PNGetSmoothFactor(int avatarIndex, SmoothFactors* smoothFactors);
// 是否在脚面接触地面时捏住不动
PNLIB_API void PNEnableFootLock(PNBOOL enable);
// 是否启用手指反关节处理
PNLIB_API void PNEnableFingerAntiJoint(PNBOOL enable);
// 获取当前手指反关节处理开关状态
PNLIB_API PNBOOL PNIsEnableFingerAntiJoint();
/**********************************************************
 *                  Mamange drawing scene                 *
 **********************************************************/
// Create and manage drawing scene of model(s)
PNLIB_API void* PNCreateBvhPlayer(BVHWindowContainerRef hWndParent);
// Splite and duplicate drawing scene
PNLIB_API void PNSetBvhPlayerCameras(int cameras);
// Bind/unbind camera to an avatar
PNLIB_API void PNEnableBvhPlayerCameraBind(int cameraIndex, int avatarIndex, PNBOOL enableBind);
// Resize drawing window to fill the containner
PNLIB_API void PNBvhPlayerResizeToParent();
// Release drawing scene
PNLIB_API void PNCloseBvhPlayer();
// Enable/disable mass showing for avatar
PNLIB_API void PNEnableMassShowing(int avatarIndex, PNBOOL enable);
// 是否打开绘图功能
PNLIB_API void PNEnableRendering(PNBOOL enable);
// Get sensor suit type in opened raw file
PNLIB_API SensorSuitTypes PNGetSensorSuitType();
// Get node combination mode
PNLIB_API SensorCombinationModes PNGetSensorCombinationMode(int avatarIndex);
/**********************************************************
 *                   Constraint editing                   *
 **********************************************************/
PNLIB_API PNSTATUS PNEditContact(int avatarIndex, int frameIndex , ConstraintPoint point, PNBOOL isContact);
PNLIB_API PNSTATUS PNGetContactStatus(int avatarIndex, int frameIndex, ConstraintPoint point, PNBOOL* isContact);
PNLIB_API PNSTATUS PNBatchEditContact(int avatarIndex, int startFrameIndex, int endFrameIndex, ConstraintPoint point, PNBOOL isContact);
PNLIB_API PNSTATUS PNBatchResetContactEditStatus(int avatarIndex, int startFrameIndex, int endFrameIndex, ConstraintPoint point);
PNLIB_API PNSTATUS PNResetContactEditStatus(int avatarIndex, int frameIndex, ConstraintPoint point);
// 当调节模型朝向时，是否绕原点或者自身旋转，默认绕自身旋转
PNLIB_API void PNEnableSpinWithOrigin(int avatarIndex, PNBOOL enable);
/**********************************************************
 *                     Prop management                    *
 **********************************************************/
// Enable/Disable refered prop.
PNLIB_API PNBOOL PNPropEnable(int avatarIndex, PropIdentity propId, PNBOOL enable);
// Set parent of prop.
PNLIB_API PNBOOL PNPropSetParent(int avatarIndex, PropIdentity propId, int parentBoneId);
// Bind sensor onto prop.
PNLIB_API PNBOOL PNPropBindSensor(int avatarIndex, PropIdentity propId, int sensorId);
// 获取世界坐标系下骨骼的位置和朝向矢量
PNLIB_API void PNGetBonePosition(int avatarIndex, int boneId, int eventCode, Vector3_t* bonePos, Vector3_t* boneDirection);
// 是否激活手指游戏模式
PNLIB_API void PNEnableGameModeForFingers(PNBOOL enable);
// 查询当前是否激活了手指游戏模式
PNLIB_API PNBOOL PNIsEnableGameModeForFingers();
//==========以下为定制函数，后期可能去除==========

// 是否激活bvh输出的hip位移匀速运动的功能
PNLIB_API void PNEnableBvhMoving(int avatarIndex, PNBOOL enable);
// 匀速运动倍速
PNLIB_API void PNSetBvhMovingV(int avatarIndex, float v);
// 是否激活高尔夫球杆绘图
PNLIB_API void PNEnableGolfCue(PNBOOL enable);