PosTrack/PNLib-v3.1.33.5652/include/PNDataTypes.h

/********************************************
 *               Enum types                 *
 ********************************************/

// Suit mode types of sensor at realtime mode
typedef enum _SensorSuitTypes
{
    SS_LegacySensors,   // Wireless legacy suit
    SS_NeuronSensors,   // Neuron nodes suit
    SS_Unknown,          // Unknown type
}SensorSuitTypes;
// Sensor binding combination mode
typedef enum _SensorCombinationModes
{
    SC_ArmOnly,              // Left arm or right arm only
    SC_UpperBody,            // Upper body, include one arm or both arm, must have chest node
    SC_FullBody,             // Full body mode
	SC_LowerBody,            // Lower body, sensors of legs and hips are necessory
    SC_Unknown,              // Unknown type
}SensorCombinationModes;
// Running mode
typedef enum _RunningMode
{
    RM_Realtime,
    RM_RawPlaying,
    RM_Unknown,           // Unknown type
}RunningMode;
// Bones can used as constraint 
typedef enum _ConstraintPoint
{
    CP_Hip       = 0,        // Hip
    CP_RightFoot = 3,        // Right foot
    CP_LeftFoot  = 6,        // Left foot
    CP_RightHand = 10,       // Right hand
    CP_LeftHand  = 14,       // Left hand
    CP_Unknown,              // Unknown type
}ConstraintPoint;
// Prop identities
typedef enum _PropIdentity
{
    PI_Prop0,                // Prop0
	PI_Prop1,                // Prop1
	PI_Prop2,                // Prop2
	PI_Prop3,                // Prop3
	PI_Prop4,                // Prop4
	PI_RightShoulderExtra,   // Right shoulder extra
	PI_LeftShoulderExtra,    // Left shoulder extra
    PI_Unknown,              // Unknown type
}PropIdentity;
typedef struct _SmoothFactors
{
	int GlobalDisplacement;  // Smooth factor of Displacement for all bones
	int GlobalRotation;      // Smooth factor of rotation for all bones
	int HipDisplacement;     // Smooth factor of Displacement specially for hip, global value is override by this value
	int FeetDisplacement;    // Smooth factor of rotation specially for feet, global value is override by this value
	int HipRotation;
	int FeetRotation;
}SmoothFactors;