PosTrack/PNLib-v3.1.33.5652/include/PNCallbacks.h

// Constraint data callback
typedef void(__stdcall *PNEventContactDataCallback)(void* customObject, int avatarIndex, FrameContactData* contactData);