PosTrack/PNLib-v3.1.33.5652/include/PNLib.cs


        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterContactDataCallback(IntPtr customObject, PNEventContactDataCallback handler);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEditContact(int avatarIndex, int frameIndex, ConstraintPoint point, int isConstrain);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetContactStatus(int avatarIndex, int frameIndex, ConstraintPoint point, ref bool isContact);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNBatchEditContact(int avatarIndex, int startFrameIndex, int endFrameIndex, ConstraintPoint point, bool isConstrain);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNBatchResetContactEditStatus(int avatarIndex, int startFrameIndex, int endFrameIndex, ConstraintPoint point);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNResetContactEditStatus(int avatarIndex, int frameIndex, ConstraintPoint point);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNFeetConstraintOptimization(int avatarIndex, uint level);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetSmoothFactor(int avatarIndex, SmoothFactors facters);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableSmoothFilter(int avatarIndex, bool enable);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetSmoothFactor(int avatarIndex, ref SmoothFactors facters);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNIsSmoothFilterEnabled(int avatarIndex);
        /// <summary>
        /// // 是否在脚面接触地面时捏住不动
        /// </summary>
        /// <param name="enable"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableFootLock(bool enable);

        /// <summary>
        /// // 是否处理手指反关节
        /// </summary>
        /// <param name="enable"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableFingerAntiJoint(bool enable);

        /// <summary>
        /// // 是否处理手指反关节
        /// </summary>
        /// <param name="enable"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNIsEnableFingerAntiJoint();

        /// <summary>
        /// 是否激活高尔夫球杆绘图
        /// </summary>
        /// <param name="enable"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableGolfCue(bool enable);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetPDamping(int avatarIndex, float pdaming);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern float PNGetPDamping(int avatarIndex);

        // 设置地面高度，单位：米
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetGroundHeight(int avatarIndex, float height);

        // 获取地面高度，单位：米
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern float PNGetGroundHeight(int avatarIndex);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void RestrictArmRotation(bool be);
        
        /// <summary>
        /// 设置脊柱平滑系数
        /// </summary>
        /// <param name="breastbone">胸椎平滑系数</param>
        /// <param name="vertebra">脊椎平滑系数</param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetSpineSmoothFactors(int avatarIndex, float breastbone, float vertebra);
                
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetBonePosition(int avatarIndex, int boneId, int eventCode, ref float posX, ref float posY, ref float posZ, ref float vectX, ref float vectY, ref float vectZ);
        
        /// <summary>
        /// 是否激活bvh输出的hip位移匀速运动的功能
        /// </summary>
        /// <param name="enable"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableBvhMoving(int avatarIndex, bool enable);

        /// <summary>
        /// 匀速运动倍速
        /// </summary>
        /// <param name="v"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetBvhMovingV(int avatarIndex, float v);

        /// <summary>
        /// 身体倾斜矢量回调函数
        /// </summary>
        /// <param name="handle"></param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterBodySwingVectorStringCallback(IntPtr customObject, PNBodySwingVectorStringCallback handle);        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterBodyCenterMassCallback(IntPtr customObject, PNBodyMassVectorStringCallback handle);    

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern IntPtr PNCreateBvhPlayer(IntPtr hWndParent);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetBvhPlayerCameras(int cameras);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNGetAvatarCount();
        // 增加一个角色，返回角色Id
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNCreateAvatar();
        // 删除指定角色，返回剩余的总角色数
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNRemoveAvatar(int avatar);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableMassShowing(int avatarIndex, bool enable);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNBvhPlayerResizeToParent();
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableBvhPlayerCameraBind(int camera, int avatar, bool enable);
    
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNCloseBvhPlayer();

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableRendering(bool enable);

        // 设置模式是全全身模式还是普通的模式
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetSensorSuitType(SensorSuitTypes modes);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern SensorSuitTypes PNGetSensorSuitType();

        // 设置节点组合模式
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetSensorCombinationMode(int avatarIndex, SensorCombinationModes mode);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern SensorCombinationModes PNGetSensorCombinationMode(int avatarIndex);

        // 设置播放模式还是实时模式
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
         public static extern void PNSetRunningMode(RunningMode runMode);
        // 得到当前的模式
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern RunningMode PNGetRunningMode();
        // 设置道具的信息
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetProbInfo(int avatarIndex, int probId, int sensorId, int parentId, float probLength);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableGameModeForFingers(bool enable);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNIsEnableGameModeForFingers();

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableSpinWithOrigin(int avatarIndex, bool enable);

        
        /**********************************************************
         *                     Prop management                    *
         **********************************************************/
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropEnable(int avatarIndex, PropIdentity propId, bool enable);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropSetParent(int avatarIndex, PropIdentity propId, int parentBoneId);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNPropBindSensor(int avatarIndex, PropIdentity propId, int sensorId);
